--- a/pages/style.css
+++ b/pages/style.css
@@ -1,6 +1,6 @@
 @import url(../vendor/normalize.css);
 
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz@9..40&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&display=swap");
 
 @import url(../blocks/page/page.css);
 
@@ -53,11 +53,12 @@
 
 .cover {
   padding-top: 26px;
+  max-width: 1440px;
 }
 
 .cover-container {
   display: flex;
-  padding: 40px 70px;
+  padding: 40px 70px 0px 70px;
 }
 
 .cover-container_image {
@@ -88,71 +89,201 @@
 }
 
 .cover-header_underline::after {
-    content: "";
-    background-image: url(../images/underline.png);
-    width: 100%;
-    height: 11px;
-    bottom: 0;
-    left: 0;
-    position: absolute;
-    letter-spacing: 0.1em;
+  content: "";
+  background-image: url(../images/underline.png);
+  width: 100%;
+  height: 11px;
+  bottom: 0;
+  left: 0;
+  position: absolute;
+  letter-spacing: 0.1em;
 }
 
 .cover-header_bold {
-    font-weight: 700;
+  font-family: DM Sans;
+  font-size: 80px;
+  font-weight: 700;
+  line-height: 88px;
+  letter-spacing: 0.1em;
 }
 
 .cover-listen {
-    display: flex;
-    flex-direction: column;
-    padding: 90px 0px 153px 82px;
+  display: flex;
+  flex-direction: column;
+  padding: 90px 0px 153px 82px;
 }
 
 .cover-listen_text {
-    font-family: DM Sans;
-font-size: 15px;
-font-weight: 400;
-line-height: 24px;
-color: white;
-margin: 0;
+  font-family: DM Sans;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 24px;
+  color: white;
+  margin: 0;
 }
 
 .cover-listen_buttons {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    margin-top: 16px;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  margin-top: 16px;
 }
 .cover-listen_list {
-
 }
 
 .cover-listen_button {
- display: block;
- width: 32px;
- height: 32px;
- margin-right: 16px;
+  display: block;
+  width: 32px;
+  height: 32px;
+  margin-right: 16px;
 }
 
 .cover-listen_button__spotify {
- background-image: url(../images/spotify.png);
+  background-image: url(../images/spotify.png);
 }
 
 .cover-listen_button__red {
- background-image: url(../images/redaudio.png);
+  background-image: url(../images/redaudio.png);
 }
 
 .cover-listen_button__soundcloud {
- background-image: url(../images/sin.png);
+  background-image: url(../images/sin.png);
 }
 
 .cover-listen_button__podcast {
- background-image: url(../images/podcast.png);
+  background-image: url(../images/podcast.png);
 }
 
 .cover-listen_button__radio {
   background-image: url(../images/radio.png);
 }
+
+.episodes_container {
+  display: flex;
+  flex-direction: column;
+  max-width: 1440px;
+}
+
+.episodes_container__header {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding: 93px 70px 0px 70px;
+  align-items: flex-end;
+}
+.episodes_header {
+  font-family: DM Sans;
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 79.2px;
+  letter-spacing: 0.1em;
+  margin: 0;
+  color: white;
+}
+.episodes_button {
+  width: 178px;
+  height: 51px;
+  color: white;
+  border-radius: 6px;
+  background-color: rgba(17, 141, 168, 1);
+  font-family: DM Sans;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 27px;
+  padding: 0;
+}
+
+.episodes_container__cards {
+  max-height: 1689px;
+  max-width: 1300px;
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  padding: 64.44px 70px 0px 70px;
+  margin: 0;
+  justify-content: space-between;
+}
+
+.episodes_card {
+  flex-basis: 512px;
+  padding: 40.44px 40px 39.56px 40px;
+  border-radius: 32px;
+  background-color: rgba(0, 0, 0, 1);
+}
+
+.card {
+  display: flex;
+  flex-direction: row;
+  gap: 53px;
+}
+
+.card_image {
+    height: 100%;
+}
+
+.card_button {
+  border-radius: 6px;
+  background-color: rgba(25, 25, 25, 1);
+  color: white;
+  margin-top: 7.56px;
+  margin-bottom: 48.44px;
+  font-family: DM Sans;
+font-size: 18px;
+font-weight: 400;
+line-height: 27px;
+border-style: none;
+padding: 0 16px;
+}
+
+
+.card_p {
+  font-family: DM Sans;
+  font-size: 17px;
+  font-weight: 400;
+  line-height: 27px;
+  color: rgba(17, 141, 168, 1);
+  margin: 0;
+  margin-bottom: 17.56px;
+}
+
+.card_header {
+  font-family: DM Sans;
+  font-size: 64px;
+  font-weight: 400;
+  line-height: 70.4px;
+  letter-spacing: 0.1em;
+  color: white;
+  margin: 0;
+  padding-bottom: 28px;
+}
+.card_header_little {
+font-size: 57px;
+}
+
+.card_p2 {
+  font-family: DM Sans;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 33px;
+  color: rgba(255, 255, 255, 0.7);
+  margin: 0;
+  padding-bottom: 18px;
+}
+
+.card_button2 {
+    width: 208px;
+    height: 51px;
+    color: white;
+    border-radius: 6px;
+    background-color: rgba(17, 141, 168, 1);
+    font-family: DM Sans;
+    font-size: 17px;
+    font-weight: 400;
+    line-height: 27px;
+    padding: 0;
+    border-style: none;
+  }
+
 
