--- a/blocks/footer/__social_logo_facebook/__social_logo_facebook.css
+++ b/blocks/footer/__social_logo_facebook/__social_logo_facebook.css
@@ -1,5 +1,5 @@
 .footer__social_logo_facebook {
-background-image: url(../../../../images/facebook.svg);
+background-image: url(../../../images/facebook.svg);
 width: 24px;
 height: 24px;
 }
