--- a/blocks/footer/__social_logo_insta/__social_logo_insta.css
+++ b/blocks/footer/__social_logo_insta/__social_logo_insta.css
@@ -1,5 +1,5 @@
 .footer__social_logo_insta {
-background-image: url(../../../../images/insta.svg);
+background-image: url(../../../images/insta.svg);
 width: 24px;
 height: 24px;
 }
