--- a/blocks/footer/__social_logo_twitter/__social_logo_twitter.css
+++ b/blocks/footer/__social_logo_twitter/__social_logo_twitter.css
@@ -1,5 +1,5 @@
 .footer__social_logo_twitter {
-background-image: url(../../../../images/twitter.svg);
+background-image: url(../../../images/twitter.svg);
 width: 24px;
 height: 24px;
 }
