--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,4 +6,5 @@
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: 'Inter', Arial, sans-serif;
+  box-sizing: border-box;
 }
