--- a/pages/style.css
+++ b/pages/style.css
@@ -11,75 +11,75 @@
 @import url(../blocks/header/list-item/list-item.css);
 
 @import url(../blocks/cover/cover.css);
-@import url(../blocks/cover/__container/container.css);
-@import url(../blocks/cover/__image/image.css);
-@import url(../blocks/cover/__content/content.css);
-@import url(../blocks/cover/__header/header.css);
-@import url(../blocks/cover/__header/_underline/underline.css);
-@import url(../blocks/cover/__header/_bold/bold.css);
+@import url(../blocks/cover/container/container.css);
+@import url(../blocks/cover/image/image.css);
+@import url(../blocks/cover/content/content.css);
+@import url(../blocks/cover/header/header.css);
+@import url(../blocks/cover/header/_underline/underline.css);
+@import url(../blocks/cover/header/_bold/bold.css);
 
 @import url(../blocks/listen/listen.css);
-@import url(../blocks/listen/__text/text.css);
-@import url(../blocks/listen/__buttons/buttons.css);
-@import url(../blocks/listen/__button/button.css);
-@import url(../blocks/listen/__button/_spotify/spotify.css);
-@import url(../blocks/listen/__button/_red/red.css);
-@import url(../blocks/listen/__button/_soundcloud/soundcloud.css);
-@import url(../blocks/listen/__button/_podcast/podcast.css);
-@import url(../blocks/listen/__button/_radio/radio.css);
+@import url(../blocks/listen/text/text.css);
+@import url(../blocks/listen/buttons/buttons.css);
+@import url(../blocks/listen/button/button.css);
+@import url(../blocks/listen/button/spotify/spotify.css);
+@import url(../blocks/listen/button/red/red.css);
+@import url(../blocks/listen/button/soundcloud/soundcloud.css);
+@import url(../blocks/listen/button/podcast/podcast.css);
+@import url(../blocks/listen/button/radio/radio.css);
 
-@import url(../blocks/episodes/__container/container.css);
-@import url(../blocks/episodes/__title/title.css);
-@import url(../blocks/episodes/__header/header.css);
-@import url(../blocks/episodes/__button/button.css);
-@import url(../blocks/episodes/__cards/cards.css);
-@import url(../blocks/episodes/__card/card.css);
+@import url(../blocks/episodes/container/container.css);
+@import url(../blocks/episodes/title/title.css);
+@import url(../blocks/episodes/header/header.css);
+@import url(../blocks/episodes/button/button.css);
+@import url(../blocks/episodes/cards/cards.css);
+@import url(../blocks/episodes/card/card.css);
 
 @import url(../blocks/card/card.css);
-@import url(../blocks/card/__image/image.css);
-@import url(../blocks/card/__button/button.css);
-@import url(../blocks/card/__button2/button2.css);
-@import url(../blocks/card/__header/header.css);
-@import url(../blocks/card/__header/_little/little.css);
-@import url(../blocks/card/__text/text.css);
-@import url(../blocks/card/__text2/text2.css);
+@import url(../blocks/card/image/image.css);
+@import url(../blocks/card/button/button.css);
+@import url(../blocks/card/button2/button2.css);
+@import url(../blocks/card/header/header.css);
+@import url(../blocks/card/header/_little/little.css);
+@import url(../blocks/card/text/text.css);
+@import url(../blocks/card/text2/text2.css);
 
 @import url(../blocks/hero/hero.css);
-@import url(../blocks/hero/__container/container.css);
-@import url(../blocks/hero/__image/image.css);
-@import url(../blocks/hero/__content/content.css);
-@import url(../blocks/hero/__header/header.css);
-@import url(../blocks/hero/__frame/frame.css);
-@import url(../blocks/hero/__text/text.css);
-@import url(../blocks/hero/__text2/text2.css);
-@import url(../blocks/hero/__text3/text3.css);
-@import url(../blocks/hero/__subscribe/subscribe.css);
+@import url(../blocks/hero/container/container.css);
+@import url(../blocks/hero/image/image.css);
+@import url(../blocks/hero/content/content.css);
+@import url(../blocks/hero/header/header.css);
+@import url(../blocks/hero/frame/frame.css);
+@import url(../blocks/hero/text/text.css);
+@import url(../blocks/hero/text2/text2.css);
+@import url(../blocks/hero/text3/text3.css);
+@import url(../blocks/hero/subscribe/subscribe.css);
 @import url(../blocks/hero/container_su/subscribe.css);
-@import url(../blocks/hero/__card/card.css);
-@import url(../blocks/hero/__card_content/card_content.css);
-@import url(../blocks/hero/__text4/text4.css);
-@import url(../blocks/hero/__header_card/header_card.css);
-@import url(../blocks/hero/__button/button.css);
-@import url(../blocks/hero/__form/form.css);
+@import url(../blocks/hero/card/card.css);
+@import url(../blocks/hero/card_content/card_content.css);
+@import url(../blocks/hero/text4/text4.css);
+@import url(../blocks/hero/header_card/header_card.css);
+@import url(../blocks/hero/button/button.css);
+@import url(../blocks/hero/form/form.css);
 @import url(../blocks/hero/name__form/name__form.css);
 @import url(../blocks/hero/email__form/email__form.css);
 
 
-@import url(../blocks/reviews/__cards/cards.css);
-@import url(../blocks/reviews/__card/card.css);
-@import url(../blocks/reviews/__stars/stars.css);
-@import url(../blocks/reviews/__header/header.css);
-@import url(../blocks/reviews/__author/author.css);
+@import url(../blocks/reviews/cards/cards.css);
+@import url(../blocks/reviews/card/card.css);
+@import url(../blocks/reviews/stars/stars.css);
+@import url(../blocks/reviews/header/header.css);
+@import url(../blocks/reviews/author/author.css);
 
-@import url(../blocks/footer/__container/container.css);
-@import url(../blocks/footer/__logo/logo.css);
-@import url(../blocks/footer/__social_logo_insta/social_logo_insta.css);
-@import url(../blocks/footer/__social_logo_twitter/social_logo_twitter.css);
-@import url(../blocks/footer/__social_logo_facebook/social_logo_facebook.css);
-@import url(../blocks/footer/__social_list/social_list.css);
-@import url(../blocks/footer/__home_list/social_list.css);
-@import url(../blocks/footer/__list_item/social_list.css);
-@import url(../blocks/listen/_footer/footer.css);
+@import url(../blocks/footer/container/container.css);
+@import url(../blocks/footer/logo/logo.css);
+@import url(../blocks/footer/social_logo_insta/social_logo_insta.css);
+@import url(../blocks/footer/social_logo_twitter/social_logo_twitter.css);
+@import url(../blocks/footer/social_logo_facebook/social_logo_facebook.css);
+@import url(../blocks/footer/social_list/social_list.css);
+@import url(../blocks/footer/home_list/social_list.css);
+@import url(../blocks/footer/list_item/social_list.css);
+@import url(../blocks/listen/footer/footer.css);
 
 
 
