--- a/pages/style.css
+++ b/pages/style.css
@@ -28,6 +28,7 @@
 @import url(../blocks/listen/button/podcast/podcast.css);
 @import url(../blocks/listen/button/radio/radio.css);
 
+@import url(../blocks/episodes/episodes.css);
 @import url(../blocks/episodes/container/container.css);
 @import url(../blocks/episodes/title/title.css);
 @import url(../blocks/episodes/header/header.css);
@@ -45,6 +46,7 @@
 @import url(../blocks/card/text2/text2.css);
 
 @import url(../blocks/hero/hero.css);
+@import url(../blocks/hero/imagecontainer/imagecontainer.css);
 @import url(../blocks/hero/container/container.css);
 @import url(../blocks/hero/image/image.css);
 @import url(../blocks/hero/content/content.css);
