--- a/blocks/cover/header/bold/bold.css
+++ b/blocks/cover/header/bold/bold.css
@@ -5,3 +5,9 @@
   line-height: 88px;
   letter-spacing: 0.1em;
 }
+
+
+@media (max-width:1090px) {
+  .cover__header_bold {
+    font-size: 60px;
+}
