--- a/blocks/cover/header/header.css
+++ b/blocks/cover/header/header.css
@@ -5,6 +5,10 @@
   line-height: 88px;
   letter-spacing: 0.1em;
   color: white;
-  padding: 0px 60px 0px 60px;
   margin: 0;
+}
+
+@media (max-width:1090px) {
+  .cover__header {
+    font-size: 60px;
 }
