--- a/blocks/episodes/title/title.css
+++ b/blocks/episodes/title/title.css
@@ -5,3 +5,11 @@
   padding: 93px 70px 0px 70px;
   align-items: flex-end;
 }
+
+
+@media (max-width:665px) {
+  .episodes__title {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
