--- a/blocks/hero/container/container.css
+++ b/blocks/hero/container/container.css
@@ -1,6 +1,6 @@
 .hero__container {
   display: flex;
-  flex-direction: row;
-  padding: 0px 70px 200px 70px;
-  max-width: 1440px;
+  justify-content: space-between;
+  padding: 0px 70px 0px 70px;
+  column-gap: 60px;
 }
