--- a/blocks/hero/image/image.css
+++ b/blocks/hero/image/image.css
@@ -1,5 +1,8 @@
+
 .hero__image {
-  height: auto;
   width: 100%;
-  max-width: 650px;
+  height: 100%;
+  object-fit: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
