--- a/blocks/reviews/cards/cards.css
+++ b/blocks/reviews/cards/cards.css
@@ -8,3 +8,15 @@
   margin: 0;
   list-style: none;
 }
+
+@media (max-width:1091px) {
+  .reviews_cards {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 321px 321px;
+}
+
+@media (max-width:790px) {
+  .reviews_cards {
+    grid-template-columns: repeat(1, 1fr);
+    
+}
