--- a/blocks/footer/container/container.css
+++ b/blocks/footer/container/container.css
@@ -4,3 +4,15 @@
   flex-direction: row;
   gap: 16px;
 }
+
+@media (max-width:970px) {
+  .footer__container {
+    flex-direction: column;
+    padding: 80px 50px 120px 50px;
+  }
+}
+
+@media (max-width:510px) {
+  .footer__container {
+    padding: 80px 30px 120px 30px;
+}
