--- a/blocks/header/contacts-list/contacts-list.css
+++ b/blocks/header/contacts-list/contacts-list.css
@@ -19,4 +19,18 @@
     font-size: 18px;
   }
 
-  
+  @media (max-width:510px) {
+    .header__contacts-list {
+      font-size: 14px;}
+      .header__contacts-list:last-child {
+        font-size: 14px;
+      }
+  }
+
+  @media (max-width:450px) {
+    .header__contacts-list {
+      font-size: 12px;}
+      .header__contacts-list:last-child {
+        font-size: 12px;
+      }
+  }
