--- a/blocks/card/header/header.css
+++ b/blocks/card/header/header.css
@@ -14,3 +14,11 @@
     font-size: 50px;
   }
 }
+
+@media (max-width:650px) {
+  .card__header {
+    font-size: 30px;
+    line-height: 30px;
+    letter-spacing: 0em;
+  }
+}
