--- a/blocks/card/text2/text2.css
+++ b/blocks/card/text2/text2.css
@@ -7,3 +7,15 @@
   margin: 0;
   padding-bottom: 18px;
 }
+
+@media (max-width:1090px) {
+  .card__text2{
+    font-size: 19px;
+  }
+}
+
+@media (max-width:650px) {
+  .card__text2 {
+    font-size: 17px;
+  }
+}
