--- a/blocks/cover/header/bold/bold.css
+++ b/blocks/cover/header/bold/bold.css
@@ -7,7 +7,17 @@
 }
 
 
-@media (max-width:1090px) {
+@media (max-width:1220px) {
   .cover__header_bold {
-    font-size: 60px;
+    font-size: 50px;
+    line-height: 50px;
+  letter-spacing: 0.1em;
+}
+
+@media (max-width:410px) {
+  .cover__header_bold {
+    font-size: 30px;
+    line-height: 50px;
+  letter-spacing: 0.1em;
+  }
 }
