--- a/blocks/cover/header/header.css
+++ b/blocks/cover/header/header.css
@@ -8,7 +8,22 @@
   margin: 0;
 }
 
+@media (max-width:1220px) {
+  .cover__header {
+    font-size: 50px;
+    margin-top: 130px;
+}
+}
 @media (max-width:1090px) {
   .cover__header {
-    font-size: 60px;
+    margin-top: 0px;
+  }
 }
+
+@media (max-width:410px) {
+  .cover__header {
+    font-size: 30px;
+    line-height: 50px;
+    letter-spacing: 0.1em;
+      }
+  }
