--- a/blocks/cover/image/image.css
+++ b/blocks/cover/image/image.css
@@ -1,4 +1,11 @@
-.cover___image {
-  max-width:100%;
-  height:auto;
+.cover__image {
+  position: relative; 
+  max-width: 100%;
+
+}
+
+@media (max-width:1090px) {
+  .cover__image {
+    width: 100%;
+  }
 }
