--- a/blocks/episodes/cards/cards.css
+++ b/blocks/episodes/cards/cards.css
@@ -10,6 +10,11 @@
 
 @media (max-width:1090px) {
   .episodes__cards {
-    padding: 40px 70px 0px 70px;
+    padding: 30px 50px 0px 50px;
   }
 }
+@media (max-width:510px) {
+  .episodes__cards {
+    padding: 30px 30px 0px 30px;
+  }
+  }
