--- a/blocks/episodes/header/header.css
+++ b/blocks/episodes/header/header.css
@@ -13,3 +13,12 @@
     font-size: 40px;
   }
 }
+
+
+@media (max-width:510px) {
+  .episodes__header {
+    font-size: 30px;
+    line-height: 70px;
+  letter-spacing: 0em;
+  }
+}
