--- a/blocks/episodes/title/title.css
+++ b/blocks/episodes/title/title.css
@@ -11,5 +11,12 @@
   .episodes__title {
     flex-direction: column;
     align-items: flex-start;
+    padding: 50px 70px 0px 70px;
   }
 }
+
+@media (max-width:510px) {
+  .episodes__title {
+    padding: 20px 30px 0px 30px;
+  }
+  }
