--- a/blocks/header/container/container.css
+++ b/blocks/header/container/container.css
@@ -6,3 +6,10 @@
     justify-content: space-between;
     padding-top: 22px;
   }
+
+
+  @media (max-width:680px) {
+    .header__container {
+      flex-direction: column;
+    }
+  }
