--- a/blocks/hero/button/button.css
+++ b/blocks/hero/button/button.css
@@ -19,3 +19,10 @@
 .hero__button:active {
   transform: scale(0.98);
 }
+
+
+@media (max-width:1090px) {
+  .hero__button{
+    max-width: 380px;
+  }
+}
