--- a/blocks/hero/container_su/subscribe.css
+++ b/blocks/hero/container_su/subscribe.css
@@ -2,3 +2,16 @@
     max-width: 1440px;
     padding: 0px 70px 100px 70px;
 }
+
+@media (max-width:1100px) {
+    .hero__container_subscribe {
+        padding: 0px 50px 100px 50px;
+    }
+  
+  }
+  
+  @media (max-width:510px) {
+    .hero__container_subscribe {
+      padding: 0px 30px 40px 30px;
+    }
+    }
