--- a/blocks/hero/header/header.css
+++ b/blocks/hero/header/header.css
@@ -8,3 +8,10 @@
     margin: 0;
     padding-bottom: 30px;
 }
+
+
+@media (max-width:1210px) {
+    .hero__header {
+      font-size: 50px;
+    }
+  }
