--- a/blocks/hero/header_card/header_card.css
+++ b/blocks/hero/header_card/header_card.css
@@ -8,3 +8,31 @@
   margin: 0;
   padding: 0px 151px 0px 60px;
 }
+
+@media (max-width:1210px) {
+  .hero__header_card {
+    font-size: 60px;
+  }
+}
+@media (max-width:1210px) {
+  .hero__header_card {
+    font-size: 50px;
+    line-height: 50px;
+  letter-spacing: 0em;
+  }
+}
+
+@media (max-width:650px) {
+  .hero__header_card {
+    font-size: 35px;
+    line-height: 40px;
+  letter-spacing: 0em;
+  }
+}
+
+.light2o {
+  position: absolute;
+  height: auto;
+  top:160px;
+  left:-20px;
+}
