--- a/blocks/hero/image/image.css
+++ b/blocks/hero/image/image.css
@@ -1,8 +1,4 @@
 
 .hero__image {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  background-position: center;
-  background-repeat: no-repeat;
+  max-width: 100%;
 }
