--- a/blocks/hero/subscribe/subscribe.css
+++ b/blocks/hero/subscribe/subscribe.css
@@ -1,6 +1,6 @@
 .hero__subscribe {
   max-width: 1300px;
-  height: 387px;
   border-radius: 32px;
   background-color: rgba(0, 0, 0, 1);
+  position: relative;
 }
