--- a/blocks/hero/text2/text2.css
+++ b/blocks/hero/text2/text2.css
@@ -6,3 +6,9 @@
     color: rgba(255, 255, 255, 0.7);
     margin: 0;
   }
+
+  @media (max-width:1210px) {
+    .hero__text2 {
+      font-size: 18px;
+    }
+  }
