--- a/blocks/hero/text3/text3.css
+++ b/blocks/hero/text3/text3.css
@@ -7,3 +7,9 @@
     margin: 0;
     padding-top: 33px;
   }
+
+  @media (max-width:1210px) {
+    .hero__text3 {
+      font-size: 18px;
+    }
+  }
