--- a/blocks/reviews/cards/cards.css
+++ b/blocks/reviews/cards/cards.css
@@ -2,7 +2,6 @@
   max-width: 1300px;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: 321px 364px;
   grid-gap: 16px 16px;
   padding: 100px 70px;
   margin: 0;
@@ -13,10 +12,11 @@
   .reviews_cards {
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 321px 321px;
+    padding: 0px 50px;
 }
 
 @media (max-width:790px) {
   .reviews_cards {
     grid-template-columns: repeat(1, 1fr);
-    
+    padding: 0px 30px;
 }
