--- a/blocks/listen/footer/footer.css
+++ b/blocks/listen/footer/footer.css
@@ -2,3 +2,9 @@
   margin: 0px 0px 0px 0px;
   padding-left: 16px;
 }
+
+@media (max-width:970px) {
+  .listen__buttons_footer {
+    padding-left: 0px;
+  }
+}
