--- a/pages/style.css
+++ b/pages/style.css
@@ -1,6 +1,5 @@
 @import url(../vendor/normalize.css);
-
-@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,100..1000&display=swap");
+@import url(../vendor/fonts.css);
 
 @import url(../blocks/page/page.css);
 
