--- a/blocks/card/text/text.css
+++ b/blocks/card/text/text.css
@@ -1,21 +1,20 @@
 .card__text {
-  font-family: DM Sans;
-  font-size: 17px;
+  font-size: 22px;
   font-weight: 400;
-  line-height: 27px;
-  color: rgba(17, 141, 168, 1);
+  line-height: 33px;
+  color: rgba(255, 255, 255, 0.7);
   margin: 0;
-  margin-bottom: 18px;
+  padding-bottom: 18px;
 }
 
 @media (max-width:1090px) {
   .card__text {
-    font-size: 14px;
+    font-size: 19px;
   }
 }
 
 @media (max-width:650px) {
   .card__text {
-    font-size: 12px;
+    font-size: 17px;
   }
 }
