--- a/blocks/hero/text/text.css
+++ b/blocks/hero/text/text.css
@@ -1,14 +1,13 @@
 .hero__text {
-  font-family: DM Sans;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 27px;
-  color: rgba(17, 141, 168, 1);
-  margin-bottom: 5px;
-}
-
-@media (max-width:1210px) {
-  .hero__text {
-    font-size: 14px;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 33px;
+    color: rgba(255, 255, 255, 0.7);
+    margin: 0;
   }
-}
+
+  @media (max-width:1210px) {
+    .hero__text {
+      font-size: 18px;
+    }
+  }
