--- a/blocks/reviews/header/header.css
+++ b/blocks/reviews/header/header.css
@@ -1,8 +1,7 @@
 .reviews_header {
   font-size: 36px;
-  font-weight: 400;
   line-height: 43.2px;
-  color: rgba(255, 255, 255, 1);
+  color: var(--color-light);
   margin: 0;
   padding: 0px 48px 19px 50px;
   letter-spacing: 0.04em;
