--- a/blocks/card/subtitle/card_subtitle.css
+++ b/blocks/card/subtitle/card_subtitle.css
@@ -1,8 +1,7 @@
 .card__subtitle {
   font-size: 17px;
-  font-weight: 400;
   line-height: 27px;
-  color: rgba(17, 141, 168, 1);
+  color: var(--color-blue);
   margin: 0;
   margin-bottom: 18px;
 }
