--- a/blocks/card/text/text.css
+++ b/blocks/card/text/text.css
@@ -1,8 +1,7 @@
 .card__text {
   font-size: 22px;
-  font-weight: 400;
   line-height: 33px;
-  color: rgba(255, 255, 255, 0.7);
+  color: var(--color-light-grey);
   margin: 0;
   padding-bottom: 18px;
 }
