--- a/blocks/episodes/button/button.css
+++ b/blocks/episodes/button/button.css
@@ -1,12 +1,10 @@
 .episodes__button {
   width: 178px;
   height: 51px;
-  color: white;
+  color: var(--color-light);
   border-radius: 6px;
-  background-color: rgba(17, 141, 168, 1);
-  font-family: DM Sans;
+  background-color: var(--color-blue);
   font-size: 17px;
-  font-weight: 400;
   line-height: 27px;
   padding: 0;
   border-style: none;
