--- a/blocks/episodes/card/card.css
+++ b/blocks/episodes/card/card.css
@@ -1,7 +1,7 @@
 .episodes__card {
   padding: 40.44px 40px 39.56px 40px;
   border-radius: 32px;
-  background-color: rgba(0, 0, 0, 1);
+  background-color: var(--color-dark);
   list-style: none;
 }
 
