--- a/blocks/footer/list_item/social_list.css
+++ b/blocks/footer/list_item/social_list.css
@@ -1,7 +1,6 @@
 .footer__list_item {
   font-size: 17px;
-  font-weight: 400;
   line-height: 27px;
-  color: rgba(255, 255, 255, 1);
+  color: var(--color-light);
   text-decoration: none;
 }
