--- a/blocks/footer/social_list/social_list.css
+++ b/blocks/footer/social_list/social_list.css
@@ -3,11 +3,11 @@
 }
 
 .footer__social_list {
-  width: 24px;
-  height: 24px;
   display: flex;
   flex-direction: row;
   gap: 10px;
   list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
