--- a/blocks/hero/email__form/email__form.css
+++ b/blocks/hero/email__form/email__form.css
@@ -4,16 +4,15 @@
     margin: 0px;
     padding: 0;
     border: 0;
-    background-color: rgba(25, 25, 25, 1);
+    background-color: var(--color-dark-grey);
     border-radius: 1px;
   }
   
   
   
   .email__form::placeholder {
-    color: rgba(255, 255, 255, 0.7);
+    color: var(--color-light-grey);
     font-size: 24px;
-    font-weight: 400;
     line-height: 28.8px;
     padding: 26px 0px 27px 19px;
   }
