--- a/blocks/hero/subtitle/subtitle.css
+++ b/blocks/hero/subtitle/subtitle.css
@@ -1,8 +1,7 @@
 .hero__subtitle {
   font-size: 17px;
-  font-weight: 400;
   line-height: 27px;
-  color: rgba(17, 141, 168, 1);
+  color: var(--color-blue);
   margin-bottom: 5px;
 }
 
