--- a/blocks/hero/subtitle_sib/subtitle_sib.css
+++ b/blocks/hero/subtitle_sib/subtitle_sib.css
@@ -1,8 +1,7 @@
 .hero__subtitle_sib {
   font-size: 17px;
-  font-weight: 400;
   line-height: 27px;
-  color: rgba(17, 141, 168, 1);
+  color: var(--color-blue);
   margin: 0;
   padding: 59.12px 0px 0px 60px;
 }
