--- a/blocks/hero/text/text.css
+++ b/blocks/hero/text/text.css
@@ -1,8 +1,7 @@
 .hero__text {
     font-size: 22px;
-    font-weight: 400;
     line-height: 33px;
-    color: rgba(255, 255, 255, 0.7);
+    color: var(--color-light-grey);
     margin: 0;
   }
 
