--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,16 +1,34 @@
+:root {
+ --color-light: white;
+ --color-dark-grey: rgba(25, 25, 25, 1);
+ --color-dark:rgba(0, 0, 0, 1);
+ --color-blue: rgba(17, 141, 168, 1);
+ --color-light-grey: rgba(255, 255, 255, 0.7);
+
+ --font-family-base: 'DM sans', sans-serif;
+ --font-weight-base: 400;
+ --font-weight-bold: 700;
+}
+
 body {
   max-width: 1440px;
   margin: auto;
   padding: 0;
-  background-color:rgba(25, 25, 25, 1);
+  background-color: var(--color-dark-grey);
+  font-family: var(--font-family-base);
+  color: var(--color-light);
+  font-weight: var(--font-weight-base);
   min-width: 320px;
   -ms-text-size-adjust: 100%;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   font-family: 'DM sans', sans-serif;
-  font-weight: 400;
-  color: white;
   font-style: normal;
   box-sizing: border-box;
+}
+
+h1, h2, h3, h4, p {
+  color: var(--color-light);
+  font-weight: var(--font-weight-base);
 }
