--- a/blocks/reviews/author/author.css
+++ b/blocks/reviews/author/author.css
@@ -1,8 +1,7 @@
 .reviews_author {
   font-size: 24px;
-  font-weight: 400;
   line-height: 28.8px;
-  color: rgba(255, 255, 255, 0.7);
+  color: var(--color-light-grey);
   margin: 0;
   padding: 0px 0px 50px 50px;
 }
